<resources>
    <string name="app_name">Learn To Sail</string>
    <string name="Preparing">Prepare To Sail</string>
    <string name="onthewater">Get On The Water</string>
    <string name="extras">Gain Knowledge  Speed</string>
    <string name="logodesc">Learn To Sail Logo</string>
    <string name="extra"><![CDATA[Gain Knowledge & Speed]]></string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="dressing">Dressing to sail</string>
    <string name="weather">Looking at the weather</string>
    <string name="boatparts">Parts of the boat</string>
    <string name="position">Sailing position</string>
    <string name="rigging">Rigging a boat</string>
    <string name="knots">Learn the knots</string>
    <string name="figureof8">Figure of 8</string>
    <string name="cleat">Securing a cleat</string>
    <string name="roundturn"><![CDATA[Round-turn & two half-hitches]]></string>
    <string name="sailcontrol">Controlling the sail</string>
    <string name="pointsofsail">Points of sail</string>
    <string name="outofirons">Getting out of irons</string>
    <string name="speedcontrol">Controlling speed</string>
    <string name="design">Small Design Element</string>
    <string name="backbutton">Back Button</string>
    <string name="banner">Banner</string>
    <string name="blankman">Boy in basic clothes</string>
    <string name="scrollgallery">Clothing gallery</string>
    <string name="bouyancy">Bouyancy Aid</string>
    <string name="longWetsuit">Long Wetsuit</string>
    <string name="shortWetsuit">Short Wetsuit</string>
    <string name="sunHat">Sun Hat</string>
    <string name="sunCream">Sun Cream</string>
    <string name="winterHat">Winter Hat</string>
    <string name="weatherTitle">Today the weather is...</string>
    <string name="ready">I\'m ready!</string>
    <string name="homebtn">Home Button</string>
    <string name="weatherToday">It\'s sunny with light winds!</string>
    <string name="choicePrompt">Would you like to...</string>
    <string name="learn">Learn</string>
    <string name="test">Test</string>
    <string name="viewInfo">View name and information</string>
    <string name="closebtn">Close</string>
    <string name="mainTitle">Main Sheet</string>
    <string name="mainDesc">The main sheet (shown in blue) is used to control the sail either pulling it in or letting it out.</string>
    <string name="mastTitle">The Mast</string>
    <string name="mastDesc">This is the long stranding pole that holds the sails placed slightly towards the front of the boat.</string>
    <string name="hullTitle">The Hull</string>
    <string name="hullDesc">The hull is what most would consider \'the boat\', it provides the bouyancy and carries everything else including you!</string>
    <string name="mainSailTitle">Mainsail</string>
    <string name="mainSailDesc">The mainsail is the largest sail on the boat. It\'s important to always sit opposite it!</string>
    <string name="jibTitle">The Jib</string>
    <string name="jibDesc">This is the headsail (the one in front of the main).</string>
    <string name="boomTitle">The Boom</string>
    <string name="boomDesc">The boom is the horizontal pole on the mast that holds the mainsail in place.</string>
    <string name="halyardTitle">Main Halyard</string>
    <string name="halyardDesc">Halyard is the term for ropes used to raise and lower sails. This one is for the main sail but there is also a jib halyard.</string>
    <string name="forestayTitle">Forestay</string>
    <string name="forestayDesc">The forestay is a line or cable that supports the mast and is attached to the bow of the boat. There are also shrouds on each side of the mast split by a spreader to space them clear from the mast.</string>
    <string name="jibsheetTitle">Jib Sheet</string>
    <string name="jibsheetDesc">The jib sheet (shown in purple) is used to control where the jib sail is, it can be pulled from both sides of the mast depending which side the wind is hitting.</string>
    <string name="daggerTitle">Daggerboard</string>
    <string name="daggerDesc">The daggerboard helps stop the boat from drifting sideways in the wind. If it is permanently in the boat it is know as a centre board.</string>
    <string name="rudderTitle">Rudder</string>
    <string name="rudderDesc">The rudder is used to steer the boat by angling it different directions.</string>
    <string name="tillerTitle">Tiller</string>
    <string name="tillerDesc">The tiller is used to control the rudder, sometimes this could be replaced by a wheel (helm). It is often found with a tiller extension as well.</string>
    <string name="kickerTitle">Kicker</string>
    <string name="kickerDesc">The kicker (shown in orange here) is used to hold the boom down to maintain the shape of the sail.</string>
    <string name="painterTitle">Painter</string>
    <string name="painterDesc">The painter (shown in green) can be used to tow the boat, tie it to the trolley or secure it other places.</string>
    <string name="learnInfo">Click to learn what each part of the boat is!</string>
    <string name="rules">Rules of the road</string>
    <string name="power">Power over sail</string>
    <string name="windward">Windward rule</string>
    <string name="starboard">Starboard rule</string>
    <string name="fiveessentials">Five essentials</string>
    <string name="sailsetting">Sail setting</string>
    <string name="balance">Balance</string>
    <string name="trim">Trim</string>
    <string name="course">Course made good</string>
    <string name="overtaking">Overtaking rule</string>
    <string name="ropes">Ropes</string>
    <string name="bluerope">Blue</string>
    <string name="purpleRope">Purple</string>
    <string name="orangerope">Orange</string>
    <string name="winddirection">Click on which of the following can be used to find the wind direction</string>
    <string name="picture1">FIrst option</string>
    <string name="picture2">Option 2</string>
    <string name="picture3">Option 3</string>
    <string name="picture4">Option 4</string>
    <string name="correct">That\'s right well done!</string>
    <string name="reset">Reset</string>
    <string name="title_activity_learn_points_of_sail">LearnPointsOfSail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="windArrow">Wind direction</string>
    <string name="closeHauli">Close Haul Info</string>
    <string name="beamReachi">Beam Reach Info</string>
    <string name="broadReachi">Broad Reach Info</string>
    <string name="trainingRuni">Training Run Info</string>
    <string name="deadRuni">Dead Run Info</string>
    <string name="closeHaulTitle">Close Haul</string>
    <string name="closeHaulText">Your sail should be all the way in and the wind is coming from almost in front of you.</string>
    <string name="beamReachTitle">Beam Reach</string>
    <string name="beamReachText">The sail should be half way out and the boat is at 90 degrees to the wind. Fastest point of sail!</string>
    <string name="broadReachTitle">Broad Reach</string>
    <string name="broadReachText">Sail a little more than half way out. Wind is slightly behind you.</string>
    <string name="trainingRunTitle">Training Run</string>
    <string name="trainingRunText">Sail is all the way out and the wind is almost directly behind you.</string>
    <string name="deadRunTitle">Dead Run</string>
    <string name="deadRunText">You should avoid going on a dead run as it\'s very easy to accidentally gybe and the boom moves very quickly!</string>
    <string name="noGoZone">Head to wind</string>
    <string name="noGoZoneText">You can\'t sail directly into the wind, sail will be flapping in the middle and you may even drift backwards!</string>
    <string name="goodjob">Good Job!</string>
    <string name="almostthere">Almost there...</string>
    <string name="notquite">Not quite!</string>
    <string name="done">Done</string>
    <string name="title_activity_learn_figureof8">LearnFigureof8</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="retry">Retry</string>
    <string name="weatherRain">It\'s very windy, cloudy and cold!</string>
    <string name="outof">/ 13</string>
    <string name="greenRope">Green</string>
    <string name="posTitle">Name the point of sail</string>
    <string name="goingAway">Going away</string>
    <string name="flappySail">Flappy sail</string>
    <string name="beamHaul">Beam Haul</string>
    <string name="broadHaul">Broad Haul</string>
    <string name="deadReach">Dead Reach</string>
    <string name="beamRun">Beam Run</string>
    <string name="closeRun">Close Run</string>
    <string name="trainingHaul">Training Haul</string>
    <string name="trainingReach">Training Reach</string>
    <string name="broadRun">Broad Run</string>
    <string name="sailAway">Away from the wind</string>
    <string name="facingWind">Facing the wind</string>
    <string name="of6">of 6</string>
    <string name="ques1">Question 1</string>
    <string name="ques2">Question 2</string>
    <string name="ques3">Question 3</string>
    <string name="ques4">Question 4</string>
    <string name="ques5">Question 5</string>
    <string name="ques6">Question 6</string>
    <string name="correctans">Correct</string>
    <string name="wrongans">Wrong</string>
    <string name="checkRudder">Install/ check the rudder and tiller</string>
    <string name="attachJibHal">Attach jib halyard</string>
    <string name="runJibSheet">Run jib sheets</string>
    <string name="raiseJib">Raise jib and cleat the jib halyard</string>
    <string name="secureTackOuthaul">Secure the mainsails tack and the outhaul</string>
    <string name="insertSlugs">Insert mainsail slugs into the mast</string>
    <string name="raiseMain">Raise the mainsail and cleat the main halyard</string>
    <string name="mistakesMade">mistakes made</string>
    <string name="tryAgain">Try Again</string>
    <string name="riggingBoat">Order the steps of rigging</string>
</resources>