<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".GainSpeed">

    <Button
        android:id="@+id/btnOvertaking"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/overtaking"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStarboard"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/arvo_bold"
        android:text="@string/fiveessentials"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStarboard" />

    <Button
        android:id="@+id/btnCoursemadegood"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/course"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTrim"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnTrim"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/trim"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBalance"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnBalance"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/balance"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDaggerboard"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnDaggerboard"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/daggerTitle"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSailSetting"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnSailSetting"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/sailsetting"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnStarboard"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/starboard"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWindward"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="439dp"
        android:layout_height="233dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/design"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_paint_foreground" />

    <ImageButton
        android:id="@+id/btnback3"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/design"
        android:scaleType="fitCenter"
        android:scrollbarThumbHorizontal="@drawable/ic_backbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_navigate_before_24"
        app:tint="@color/black"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/btnHome3"
        style="@android:style/Widget.ImageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:background="#003C2727"
        android:contentDescription="@string/homebtn"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_home_24"
        app:tint="#000000"
        tools:ignore="RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="396dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/arvo_bold"
        android:outlineProvider="none"
        android:text="@string/extra"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="135dp"
        android:layout_height="110dp"
        android:contentDescription="@string/logodesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_smallerlogo_foreground" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/arvo_bold"
        android:text="@string/rules"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btnPoweroversail"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/power"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnWindward"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/windward"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPoweroversail"
        tools:ignore="DuplicateSpeakableTextCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>