<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">

    <Button
        android:id="@+id/btnSpeedControl"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/speedcontrol"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSailControl" />

    <Button
        android:id="@+id/btnSailControl"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/sailcontrol"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPointsofSail"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnPointsofSail"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/pointsofsail"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="403dp"
        android:layout_height="220dp"
        android:contentDescription="@string/banner"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_paint_foreground" />

    <ImageButton
        android:id="@+id/btnTopic2Home"
        style="@android:style/Widget.ImageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:background="#003C2727"
        android:contentDescription="@string/homebtn"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/backButton2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_home_24"
        app:tint="#000000"
        tools:ignore="RedundantDescriptionCheck" />

    <Button
        android:id="@+id/btnRoundTurn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/roundturn"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCleat" />

    <Button
        android:id="@+id/btnCleat"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/cleat"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFigureof8" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="291dp"
        android:layout_height="182dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="88dp"
        android:contentDescription="@string/figureof8"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/btnFigureof8"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_figureof8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/arvo_bold"
        android:text="@string/knots"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/arvo_bold"
        android:text="@string/sailcontrol"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRoundTurn" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/arvo_bold"
        android:text="@string/onthewater"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="268dp"
        android:layout_height="423dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/pointsofsail"
        app:layout_constraintStart_toEndOf="@+id/btnPointsofSail"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:srcCompat="@drawable/ic_sail" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="135dp"
        android:layout_height="110dp"
        android:contentDescription="@string/logodesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_smallerlogo_foreground" />

    <ImageButton
        android:id="@+id/backButton2"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/backbutton"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_navigate_before_24"
        app:tint="@color/black"
        tools:ignore="RedundantDescriptionCheck" />

    <Button
        android:id="@+id/btnFigureof8"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/figureof8"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>